--- a/page/css/main.css
+++ b/page/css/main.css
@@ -258,20 +258,33 @@ textarea {
    ========================================================================== */
 
 @media only screen and (min-width: 768px) {
-  
   .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     /* justify-content: center; */
   }
   .row .column {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
   }
   .row.reverse {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
     flex-direction: row-reverse;
   }
   .column.content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
 }
