--- a/page/css/main.css
+++ b/page/css/main.css
@@ -315,7 +315,11 @@ textarea {
     z-index: -1;
   }
 }
-
+@media only screen and (min-width: 1200px) {
+  .banner img {
+    width: 100%;
+  }
+}
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
   (min-resolution: 1.25dppx),
