--- a/page/css/main.css
+++ b/page/css/main.css
@@ -116,37 +116,42 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-
 img {
   max-width: 100%;
 }
 .container {
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
   margin-right: auto;
   margin-left: auto;
 }
-.row {
-  margin-left: -15px;
-  margin-right: -15px;
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
-#main-content {
-  padding-top: 1.875em;
-  padding-bottom: 1.875em;
+.flex.wrap {
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.flex.center {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 .banner-cta {
   text-align: center;
   padding: 0.9375em;
 }
 a.button {
-  display: inline-block;
+  text-align: center;
   text-decoration: none;
   color: #000000;
   background-color: cornflowerblue;
   font-size: 1rem;
-  padding: 0.9375em 1.875em; /*15px 30px*/
+  padding: 0.9375em 1.875em;
   transition: 0.5s; /*transition on hover*/
+  margin-right: 1em;
+  margin-bottom: 1em;
 }
 a.button:hover {
   background-color: pink;
@@ -162,10 +167,6 @@ a.button:hover {
 .logo {
   text-align: center;
 }
-.column {
-  padding: 0.9375em; /*15px*/
-}
-
 
 /* ==========================================================================
    Helper classes
@@ -256,16 +257,7 @@ a.button:hover {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width:576px) {
-  .container {
-    max-width: 540px;
-  }
-}
-
 @media only screen and (min-width: 768px) {
-  .container {
-    max-width: 760px;
-  }
   .row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -291,14 +283,9 @@ a.button:hover {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
+    /* -webkit-box-pack: center;
     -ms-flex-pack: center;
-    justify-content: center;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .container {
-    max-width: 960px;
+    justify-content: center; */
   }
   .banner {
     position: relative;
@@ -309,9 +296,15 @@ a.button:hover {
     bottom: 0;
     left: 0;
     right: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
-    align-items: center;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: flex-end;
     z-index: 1;
   }
   .banner-cta:after {
@@ -323,14 +316,15 @@ a.button:hover {
     top: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.1);
+    /* background-color: rgba(0, 0, 0, 0.1); */
+    background-image: linear-gradient(180deg,transparent 0,transparent 50%,rgba(0,0,0,.75));
     z-index: -1;
   }
 }
+@media only screen and (min-width: 992px) {
+  /* do I need anything here? */
+}
 @media only screen and (min-width: 1200px) {
-  .container {
-    max-width: 1240px;
-  }
   .banner img {
     width: 100%;
   }
